fixed up vertical align

--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,15 @@
   
   box-sizing: border-box;
 
-
   text-align: center;
   height: 400px;
   width: 600px;
 
 
   position: absolute;
-  top:50%;
+  top: 50%;
   left:50%;
-  -ms-transform: translate(-50%, 50%);
-  transform: translate(-50%, 50%);
+  
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
