--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   
   background-color: rgb(126, 231, 245);
   position: relative;
+  width: 100vw;
+  height: 100vh;
 }
 
 code {
